[gd_scene load_steps=3 format=3 uid="uid://c3vrua7qnl6uw"]

[ext_resource type="Script" uid="uid://cy37dgn8ee6pw" path="res://UI/Wands_UI/Wand Panel Preview/preview_wand_panel.gd" id="1_abwu5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s0hhg"]
bg_color = Color(0.07450981, 0.13333334, 0.16862746, 0.8352941)

[node name="Preview_Wand_Panel" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.0
offset_top = -115.0
offset_right = 265.0
offset_bottom = 285.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_s0hhg")
script = ExtResource("1_abwu5")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="RRTY" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "RRTY:           "

[node name="RRTY2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "1"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="DMG" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "DMG_MLT:  "

[node name="DMG2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "1"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="CDLY" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "CST_DLY:     "

[node name="CDLY2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "1"

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="RLDSPD" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "RLD_SPD:    "

[node name="RLDSPD2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "1"

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="SPRD" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "SPRD:           "

[node name="SPRD2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "1"

[node name="HBoxContainer6" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="CPCTY" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "CPTY:           "

[node name="CPCTY2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "1"
